--- a/backend/package.json
+++ b/backend/package.json
@@ -13,8 +13,11 @@
   "dependencies": {
     "body-parser": "^1.20.2",
     "cors": "^2.8.5",
+    "crypto": "^1.0.1",
+    "dotenv": "^16.1.1",
     "express": "^4.18.2",
     "express-session": "^1.17.3",
-    "mongodb": "^5.5.0"
+    "mongodb": "^5.5.0",
+    "mongoose": "^7.2.2"
   }
 }
